fix: css text align

--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,10 @@
   font-family: 'Jacques Francois', serif;
 }
 
-#about, #search-title, #add-film {
+#about, #search-title, #add-film, #login, .show-film {
   text-align: center;
 }
+
 .nav a {
   color: white;
   text-decoration: none;
@@ -29,6 +30,9 @@ h3 {
   margin: 0px;
 }
 
+.about-par {
+  padding: 0 10px 0 10px;
+}
 
 .film {
   background-size: 1200px 542px;
@@ -133,10 +137,10 @@ background-repeat: no-repeat;
 }
 
 .signin-btn {
-  margin-top: 20px;
+      margin-top: 20px;
       background: #67696c;
       height: 52px;
-      width: 149px;
+      width: 210px;
       border-radius: 20px;
       cursor: pointer;
       font-weight: 900;
